@@ -96,7 +96,8 @@ Current development version: 3.30-08 (2020-04-20)
 - 08: Bugfix #848: Incomplete variable synchronisation with Includables <2>
 - 08: Bugfix #849: New log file name scheme change of release 3.30 ensured <2>
 - 08: Issue #851/1: Declarations for auxiliary variables on COBOL import <2>
-- 08: Issue #851/4: Provisional import of COBOL SORT statements <2>
+- 08: Issue #851/4: Provisional import of SORT statements from COBOL <2>
+- 08: Issue #851/5: Solution for the import of PERFORM ... THRU ... from COBOL <2>
 
 Version: 3.30 (2019-10-06)
 - 01: Issue #657: Spanish message in German locale replaced <2>
